# mech_interpretability_case_study

./: .env.example  .gitignore  LICENSE  README.md  main.py  nlp-case-study.ipynb  pyproject.toml
src/: __init__.py  config.py  data_collection.py  evaluate.py  interpret.py  logger.py  model_loader.py  sae_model.py  steer.py  train.py  utils.py
